--- a/style.css
+++ b/style.css
@@ -44,6 +44,12 @@ a:hover{
     display: inline-block;
     padding: 20px;
 }
+a:link{
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: overline;
+}
 footer{
     position: fixed;
     padding: 10px 10px 0px 10px;
@@ -129,6 +135,9 @@ p{
     border: none;
     border-radius: 5px;
     letter-spacing: 2px;
+}
+.btn:hover{
+    font-size:x-large;
 }
 .btn:focus{
     background-color:rgba(0, 0, 0, 0.18);
